Assert in VirtualMemoryTracker::remove_released_region when running the SharedArchiveConsistency.java test with -XX:NativeMemoryTracking=detail

XMLWordPrintable

    • b24
    • x86_64
    • windows

        # Internal Error (t:/workspace/open/src/hotspot/share/services/virtualMemoryTracker.cpp:449), pid=7608, tid=316
        # assert(reserved_rgn != 0LL) failed: No reserved region
        #
        # JRE version: (13.0) (fastdebug build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk-13-949, mixed mode, aot, sharing, tiered, compressed oops, g1 gc, windows-amd64)

        Problem only seen on the Windows platform.

        Run the attached test using jtreg as follows:

        jtreg -vmoptions: -XX:NativeMemoryTracking=detail SharedArchiveConsistency.java

              Assignee:
              Calvin Cheung (Inactive)
              Reporter:
              Calvin Cheung (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: