8223336: Assert in VirtualMemoryTracker::remove_released_region when running the SharedArchiveConsistency.java test with -XX:NativeMemoryTracking=detail

Added the missing call MemTracker::record_virtual_memory_reserve_and_commit()

Reviewed-by: jiangli, zgu